tests/negative/abilities/invalid_test_ability.orng
// invalid_test_ability.orng:7:31: error: can't request this ability
// test "my test" with My_Ability {
//                              ^
// 
ability My_Ability = Int

test "my test" with My_Ability {
    .ok
}